--- a/index.css
+++ b/index.css
@@ -23,6 +23,17 @@ body{
 }
 
 /* inizio style card */
+.sr-only {
+    position: absolute;
+    width: 0.0rem;
+    height: 0.0rem;
+    overflow: hidden;
+    /* padding: 0; */
+    /* margin: -0.063rem; */
+    /* clip: rect(0, 0, 0, 0); */
+    /* white-space: nowrap; */
+    /* border: 0; */
+  }
 .card{
     margin: 3em;
     background-color: #ffffff;
